@@ -4,23 +4,24 @@ require_once "config/config.php";
 include_once 'functions.php';
 include_once('api_functions.php');
 
-function db_get_country_table($min_by_year = NULL, $max_by_year = NULL, $region = FALSE) {
+function db_get_country_table($min_by_year = NULL, $max_by_year = NULL, $region = FALSE, $public = NULL) {
     $db = db_connect();
-    $yearwhere = "";
-    if ($min_by_year!==0) { $yearwhere .= " AND pledge.by_year >= " . $min_by_year . " "; }
-    if ($max_by_year!==0) { $yearwhere .= " AND pledge.by_year <= " . $max_by_year . " "; }
+    $where = "";
+    if (isset($min_by_year)) { $where .= " AND pledge.by_year >= " . $min_by_year . " "; }
+    if (isset($max_by_year)) { $where .= " AND pledge.by_year <= " . $max_by_year . " "; }
+    if (isset($public)) { $where .= " AND pledge.public = " . $public . " "; }
 
     if ($region)  {
         $query = "SELECT public, id, region AS iso3, name, conditional, quantity, reduction_percent, ";
         $query .= "rel_to, include_nonco2, include_lulucf, year_or_bau, rel_to_year, by_year, info_link, source, caveat, details, ";
         $query .= "target_Mt, target_Mt_CO2, target_Mt_nonCO2, target_Mt_LULUCF ";
-        $query .= "FROM region, pledge WHERE region.region_code = pledge.region " . $yearwhere ;
+        $query .= "FROM region, pledge WHERE region.region_code = pledge.region " . $where ;
         $query .= "ORDER BY name, by_year, conditional;";    
     } else {
         $query = "SELECT public, id, country.iso3 AS iso3, name, conditional, quantity, reduction_percent, ";
         $query .= "rel_to, include_nonco2, include_lulucf, year_or_bau, rel_to_year, by_year, info_link, source, caveat, details, ";
         $query .= "target_Mt, target_Mt_CO2, target_Mt_nonCO2, target_Mt_LULUCF ";
-        $query .= "FROM country, pledge WHERE country.iso3 = pledge.iso3 " . $yearwhere ;
+        $query .= "FROM country, pledge WHERE country.iso3 = pledge.iso3 " . $where ;
         $query .= "ORDER BY name, by_year, conditional;";
     }
 
@@ -35,11 +36,11 @@ function db_get_country_table($min_by_year = NULL, $max_by_year = NULL, $region 
 
 function db_get_pledge_years($min_by_year = NULL, $max_by_year = NULL) {
     $db = db_connect();
-    $yearwhere = "(1=1)";
-    if ($min_by_year!==0) { $yearwhere .= " AND pledge.by_year >= " . $min_by_year . " "; }
-    if ($max_by_year!==0) { $yearwhere .= " AND pledge.by_year <= " . $max_by_year . " "; }
+    $where = "(1=1)";
+    if (isset($min_by_year)) { $where .= " AND pledge.by_year >= " . $min_by_year . " "; }
+    if (isset($max_by_year)) { $where .= " AND pledge.by_year <= " . $max_by_year . " "; }
 
-    $query = "SELECT by_year FROM pledge WHERE " . $yearwhere . "ORDER BY by_year;";
+    $query = "SELECT by_year FROM pledge WHERE " . $where . "ORDER BY by_year;";
     $result = mysql_query($query, $db);
     mysql_close($db);
     if (!$result) { die('Invalid query(a): ' . mysql_error() . " (" . $query . ")"); } 
@@ -74,15 +75,18 @@ function db_get_pledge_countries($pledge_years = NULL, $regions=FALSE) {
 }    
 
 // get pledges from the pledge database 
+$min_year = isset($_REQUEST['min_year']) ? intval($_REQUEST['min_year']) : NULL;
+$max_year = isset($_REQUEST['max_year']) ? intval($_REQUEST['max_year']) : NULL;
+$public = isset($_REQUEST['public']) ? ((($_REQUEST['public']=='0') || ($_REQUEST['public']=='no')) ? 0 : 1) : NULL;
 $data = array();
-$result = db_get_country_table(intval($_REQUEST['min_year']), intval($_REQUEST['max_year']));
+$result = db_get_country_table($min_year, $max_year, FALSE, $public);
 while($row = mysql_fetch_assoc($result)) { $data[$row['id']] = $row; }
 //get pledges for regions, too
-$result = db_get_country_table(intval($_REQUEST['min_year']), intval($_REQUEST['max_year']), TRUE);
+$result = db_get_country_table($min_year, $max_year, TRUE, $public);
 while($row = mysql_fetch_assoc($result)) { $data[$row['id']] = $row; }
 
 // get the BAU values for the relevant years from the core database
-$pledge_years = db_get_pledge_years(intval($_REQUEST['min_year']), intval($_REQUEST['max_year']));
+$pledge_years = db_get_pledge_years($min_year, $max_year);
 // $parms1['years'] = trim(implode(",",$pledge_years),",");
 // turns out I need baseyear data, too, so just getting BAUs for pledge years ain't good enough
 for ($x = 1990; $x <= max($pledge_years); $x++) { $pledge_years2[] = $x; }
@@ -90,9 +94,8 @@ $parms1['years'] = trim(implode(",",$pledge_years2),",");
 $parms1['countries'] = trim(implode(",",db_get_pledge_countries($pledge_years)),",");
 $pledge_regions = db_get_pledge_countries($pledge_years,TRUE); 
 if (count($pledge_regions)>0) { $parms1['countries'] .= ((strlen($parms1['countries'])>0) ? "," : "") . trim(implode(",",$pledge_regions),","); }
-if (isset($_COOKIE['db'])) { 
-    $db = $_COOKIE['db']; 
-} else { 
+$db = $_COOKIE['db']; 
+if (!(exists_API_DB($db))) { 
     $db = get_new_API_DB(); 
     setcookie("db", $db, time()+604800);    // cookies must be sent before any output from your script
 }
@@ -149,24 +152,36 @@ foreach ($data as $pledge_info) {
         default:
             // Shouldn't reach here
     }
-    if ((floatval($pledge_info['target_Mt_CO2'])!=0) && (floatval($pledge_info['target_Mt_LULUCF'])!=0) && (floatval($pledge_info['target_Mt_nonCO2'])!=0)) {
-        $co2 = $pledge_info['target_Mt_CO2'];
-        $lulucf = $pledge_info['target_Mt_LULUCF'];
-        $nonco2 = $pledge_info['target_Mt_nonCO2'];
-    } else {
-        $co2 = $bau[$pledge_info['iso3']][$pledge_info['by_year']]['fossil_CO2_MtCO2'];
-        $lulucf = $bau[$pledge_info['iso3']][$pledge_info['by_year']]['LULUCF_MtCO2'];
-        $nonco2 = $bau[$pledge_info['iso3']][$pledge_info['by_year']]['NonCO2_MtCO2e'];
-    }
+    // add BAU info to output data array
     $data[$pledge_info['id']]['BAU_Mt_CO2'] =  $bau[$pledge_info['iso3']][$pledge_info['by_year']]['fossil_CO2_MtCO2'];
     $data[$pledge_info['id']]['BAU_Mt_LULUCF'] =  $bau[$pledge_info['iso3']][$pledge_info['by_year']]['LULUCF_MtCO2'];
     $data[$pledge_info['id']]['BAU_Mt_nonCO2'] =  $bau[$pledge_info['iso3']][$pledge_info['by_year']]['NonCO2_MtCO2e'];
-    $calcd_target_Mt_Total = $baseline - $pledged_reduction;
-    $calcd_target_Mt_CO2   = $calcd_target_Mt_Total * $co2/($co2+(intval($pledge_info['include_nonco2'])*$nonco2)+(intval($pledge_info['include_lulucf'])*$lulucf));
-    $data[$pledge_info['id']]['calcd_target_Mt_Total'] = $calcd_target_Mt_Total;
-    $data[$pledge_info['id']]['calcd_target_Mt_CO2']   = $calcd_target_Mt_CO2;
-    $data[$pledge_info['id']]['calcd_target_Mt_LULUCF']= $lulucf/$co2 * $calcd_target_Mt_CO2;
-    $data[$pledge_info['id']]['calcd_target_Mt_nonCO2']= $nonco2/$co2 * $calcd_target_Mt_CO2;
+    // calculate (and add to output data array) the breakdown of the pledge into source categories
+    if ((floatval($pledge_info['target_Mt_CO2'])!=0) && (floatval($pledge_info['target_Mt_LULUCF'])!=0) && (floatval($pledge_info['target_Mt_nonCO2'])!=0)) {
+        // in case a specific breakdown was provided, we use it to proportionally calculate the 
+        // ratio of sources within what we calculate to be the total target
+        $co2 = $pledge_info['target_Mt_CO2'];
+        $lulucf = $pledge_info['target_Mt_LULUCF'];
+        $nonco2 = $pledge_info['target_Mt_nonCO2'];
+        $calcd_target_Mt_Total = $baseline - $pledged_reduction;
+        $calcd_target_Mt_CO2   = $calcd_target_Mt_Total * $co2/($co2+(intval($pledge_info['include_nonco2'])*$nonco2)+(intval($pledge_info['include_lulucf'])*$lulucf));
+        $data[$pledge_info['id']]['calcd_target_Mt_Total'] = $calcd_target_Mt_Total;
+        $data[$pledge_info['id']]['calcd_target_Mt_CO2']   = $calcd_target_Mt_CO2;
+        $data[$pledge_info['id']]['calcd_target_Mt_LULUCF']= $lulucf/$co2 * $calcd_target_Mt_CO2;
+        $data[$pledge_info['id']]['calcd_target_Mt_nonCO2']= $nonco2/$co2 * $calcd_target_Mt_CO2;
+    } else {
+        // default method: 
+        // source categories that are included in the pledge are broken down in proportion to their share of the target year BAU
+        // source categories that are not included are set to their absolute Mt BAU level
+        $co2 = $bau[$pledge_info['iso3']][$pledge_info['by_year']]['fossil_CO2_MtCO2']; // BAU CO2 in target year
+        $lulucf = $bau[$pledge_info['iso3']][$pledge_info['by_year']]['LULUCF_MtCO2'];  // BAU LULUCF CO2 in target year
+        $nonco2 = $bau[$pledge_info['iso3']][$pledge_info['by_year']]['NonCO2_MtCO2e']; // BAU non-CO2 in target year
+        $calcd_target_Mt_Total = $baseline - $pledged_reduction;
+        $data[$pledge_info['id']]['calcd_target_Mt_Total'] = $calcd_target_Mt_Total;
+        $data[$pledge_info['id']]['calcd_target_Mt_CO2']   = $calcd_target_Mt_Total * $co2 / $baseline; // remember, $baseline only includes the sources specified in the pledge
+        $data[$pledge_info['id']]['calcd_target_Mt_LULUCF']= ($pledge_info['include_lulucf'] == 1 ) ? ($calcd_target_Mt_Total * $lulucf / $baseline) : $lulucf;
+        $data[$pledge_info['id']]['calcd_target_Mt_nonCO2']= ($pledge_info['include_nonco2'] == 1 ) ? ($calcd_target_Mt_Total * $nonco2 / $baseline) : $nonco2;
+    }
     $data[$pledge_info['id']]['pledged_reduction']=$pledged_reduction;
 }
  
@@ -200,20 +215,20 @@ $ret .= (isset($_REQUEST['dl'])) ? "" : "<tr>\n<td>";
     $ret .= (isset($_REQUEST['dl'])) ? "\n" : "</td>\n</tr>\n";
 }
 $ret .= (isset($_REQUEST['dl'])) ? "" : "</table>";
+$ret .= "<---END OF DATA--->";
 
 if (isset($_REQUEST['dl'])) {
+    $filename = isset($_REQUEST['filename']) ? $_REQUEST['filename'] : "pledges.xls";
     header("Cache-Control: no-cache, must-revalidate");
     header("Pragma: no-cache");
     header("Content-type: text/tab-separated-values");
-    header("Content-Length: " . filesize($ret)); 
-    header("Content-Disposition: attachment; filename=\"pledges.xls\"" );
+    header("Content-Length: " . strlen($ret)); 
+    header("Content-Disposition: attachment; filename=\"" . $filename . "\"" );
     header("Content-Description: PHP/INTERBASE Generated Data" );
     echo ($ret);
-    echo ("<---END OF DATA--->");
     
 } else {
     echo ($ret);
-    echo ("<---END OF DATA--->");
     echo "<script>";
     echo "    $(document).ready(function(){";
     echo "        $('table.pledges').floatThead({useAbsolutePositioning: false});";
